
[package]
name = "cs"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
webgl = ["wgpu/webgl", "app-surface/webgl"]

[dependencies]
cfg-if.workspace = true
winit.workspace = true
env_logger.workspace = true
log.workspace = true
wgpu.workspace = true
pollster.workspace = true
app-surface = { workspace = true }
futures-intrusive = { workspace = true }
utils.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
byteorder.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = ["Document", "Window", "Element"] }